# app

./: .env  README.md  alembic.ini  alembic_history.txt  pyproject.toml  requirements-airflow.txt  requirements-core.txt  requirements.in  requirements.txt  temp.txt
airflow-env/: pyvenv.cfg
airflow-env/Scripts/: activate  activate.bat  get_gprof  get_objgraph  jp.py  undill
alembic/: env.py
alembic/versions/: 0e20849ea723_add_guilds.py  14a7c80b2e5d_gameroomuser.py  26059d338e23_initial.py  2b5a55fbdc96_add_user_code.py  32851f0bbfaa_add_friendship_table.py  3538728bdf54_add_user_code.py  396708ab690e_users.py  418e858faf3e_add_coins_and_last_daily_claim_to_user.py  426f50eed81a_inttishing_migrations.py  49db95f1a3fe_add_last_login_to_users.py  4c3c5eaf9508_merge_heads.py  62fc2727419f_user.py  (+32 more)
app/: main.py  run_once_friendship_seed.py  settings.py
chatbot-env/: pyvenv.cfg
chatter-env/: pyvenv.cfg
templates/: add_friend.html  available_guilds.html  base.html  buddy_requests.html  carrom.html  chat_room.html  chess.html  confirm_add_friend.html  contact.html  create-room.html  create_guild.html  dashboard.html  edit_profile.html  forgot_password.html  friend_requests.html  friends.html  friends_chat.html  game_room.html  game_room_list.html  guild_detail.html  guild_join.html  guild_join_requests.html  guild_requests.html  join_blocked.html  list_messages.html  login.html  ludo.html  modal.html  piano.html  private_chat.html  profile.html  profile_card.html  register.html  reset_password.html  snake_ladder.html  user_list.html
venv_test/: pyvenv.cfg
(+30 files in other folders)
