[tool.poetry]
name = "chess-app"
version = "0.1.0"
description = "multiplayer chess_app"
authors = ["subhash <subhashpemula450@gmail.com>"]
license = "MIT"

packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.2"
uvicorn = "^0.34.3"
sqlalchemy = "^2.0.41"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
