[tool.poetry]
name = "chess-app"
version = "0.1.0"
description = "multiplayer chess_app"
authors = ["subhash <subhashpemula450@gmail.com>"]
license = "MIT"

packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
sqlalchemy = "^2.0.41"
gunicorn = "^23.0.0"
python-dotenv = "^1.1.0"
python-jose = "^3.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.10"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
bcrypt = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
